Fixed logo overflowing on smaller screen sizes

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -66,7 +66,7 @@ body {
 
 .logo {
   display: inline-block;
-  line-height: 0;
+  line-height: 2;
   img {
     width: 4rem;
     height: 4rem;
